refactor: CACHE를 list에서 map으로 변경 및 생성자 private로 변경